@@ -1,22 +1,24 @@
 /*******************************************************************************
- * Copyright (c) 2016 Salesforce and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ * Copyright (c) 2016, 2020 Salesforce and others.
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *    Gunnar Wagenknecht - initial API and implementation
  *******************************************************************************/
 package org.eclipse.tycho.repository.registry.facade;
 
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 import java.io.File;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 public class RepositoryBlackboardKeyTest {
 
@@ -30,9 +32,8 @@ public class RepositoryBlackboardKeyTest {
 
 		// then
 		assertNotNull(key);
-		assertNotNull("should have a valid URI", key.toURI());
-		assertTrue("should contain encoded pathname",
-				key.toURI().getPath().indexOf(URLEncoder.encode(pathname, "UTF-8")) > -1);
+		assertNotNull(key.toURI(), "should have a valid URI");
+		assertTrue(key.toURI().getPath().indexOf(URLEncoder.encode(pathname, StandardCharsets.UTF_8)) > -1, "should contain encoded pathname");
 	}
 
 	@Test
@@ -42,7 +43,7 @@ public class RepositoryBlackboardKeyTest {
 
 		// then
 		assertNotNull(key);
-		assertNotNull("should have a valid URI", key.toURI());
-		assertTrue("should contain null pathname", key.toURI().getPath().indexOf("null") > -1);
+		assertNotNull(key.toURI(), "should have a valid URI");
+		assertTrue(key.toURI().getPath().indexOf("null") > -1, "should contain null pathname");
 	}
 }
